src/objects/Operator_Market_Intelligence__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Clients__c</fullName>
        <label>Number of Clients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_MI_Status__c</fullName>
        <label>Operator MI Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_of_Fleet__c</fullName>
        <label>Size of Fleet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operator Market Intelligence</relationshipLabel>
        <relationshipName>Operator_Market_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year_of_Annual_Revenue__c</fullName>
        <label>Year of Annual Revenue</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Operator Market Intelligence</label>
    <nameField>
        <displayFormat>OMI-{0000}</displayFormat>
        <label>Operator Market Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operator Market Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>